--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>El Polo Loco</title>
-    <script src="js\game.js"></script>
+    <script src="js\models\movable-object.class.js"></script>
+    <script src="/js/models/character.class.js"></script>
+    <script src="/js/models/chicken.class.js"></script>
+    <script src="/js/models/world.class.js"></script>
+    <script src="js/game.js"></script>
 </head>
 <body onload="init()" >
 
