--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>El Polo Loco</title>
+    <script src="/js/models/drawable-object.class.js"></script>
     <script src="js\models\movable-object.class.js"></script>
     <script src="/js/models/character.class.js"></script>
     <script src="/js/models/chicken.class.js"></script>
@@ -14,9 +15,11 @@
     <script src="/js/models/keyboard.class.js"></script>
     <script src="/js/models/level.class.js"></script>  
     <script src="/js/models/endboss.class.js"></script> 
+    <script src="/js/models/status-bar.class.js"></script>
     <script src="js\levels\level1.js"></script>  
     <script src="js/game.js"></script>
 </head>
+
 <body onload="init()" >
 
     <h1>El Polo Loco</h1>
