--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="/js/models/chicken.class.js"></script>
     <script src="/js/models/status-bar.class.js"></script>
     <script src="/js/models/cloud.class.js"></script>
-    
+    <script src="/js/models/start-screen.class.js"></script>
     <script src="/js/models/world.class.js"></script>
     <script src="/js/models/background-object.class.js"></script>
     <script src="/js/models/keyboard.class.js"></script>
